feat: 스케쥴러 설정

--- a/apps/commerce-api/src/main/resources/application.yml
+++ b/apps/commerce-api/src/main/resources/application.yml
@@ -29,6 +29,10 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
 
+payment:
+  pg-status-check:
+    interval: 30000
+
 ---
 spring:
   config:
